--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
 
                 <li>
                   <%= link_to(cart_items_path, class: "#{active1}") do %>
-                    <i class="fa fa-shopping-cart"></i> Cart<span id="cart-item-count"><% if customer_signed_in? %> (<%= current_customer.cart_items.count %>)<% end %></span>
+                    <i class="fa fa-shopping-cart"></i> Cart<span id="cart-item-count"><% if customer_signed_in? && current_customer.cart_items.present? %> (<%= current_customer.cart_items.count %>)<% end %></span>
                   <% end %>
                 </li>
                 <%# if customer_signed_in? && current_customer.cart_items.present? %>
@@ -137,6 +137,24 @@
                         <% active = ""%> 
                       <%end%>
 
+                      <ul class="nav navbar-nav collapse navbar-collapse">
+                        <li><%= link_to "Home", root_path, class: "#{active}" %></li>
+                        <li class="dropdown"><a href="#">Shop<i class="fa fa-angle-down"></i></a>
+                          <ul role="menu" class="sub-menu">
+                              <li><%= link_to(root_path) do %>Products<% end %></li>
+                              <li><a href="#">Product Details</a></li> 
+                              <li><%= link_to(checkouts_path) do %>Checkout<% end %></li> 
+                              <li><%=link_to(cart_items_path) do %>Cart<% end %></li> 
+                          </ul>
+                        </li> 
+                        <li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
+                          <ul role="menu" class="sub-menu">
+                            <li><a href="blog.html">Blog List</a></li>
+                            <li><a href="blog-single.html">Blog Single</a></li>
+                          </ul>
+                        </li> 
+                        <li><a href="#">Contact</a></li>
+                      </ul>
                     </div>
                   </div>
                 
