--- a/app/views/components/_content.html.erb
+++ b/app/views/components/_content.html.erb
@@ -1,35 +1,37 @@
-<div class="col-sm-3">
-  <div class="product-image-wrapper">
-    <div class="single-products">
-      <div class="productinfo text-center">
-        <%= link_to product_path(product) do %>
-          <%= image_tag(product.pictures.find_by(imageable_id: product.id).image.url) %>
-        <% end %>
-        <h2>&#8377; <%= product.price %></h2>
-        
-        <%= link_to product_path(product) do%>
-          <p><acronym title="<%= product.name %>"> <%= truncate(product.name , length:23) %></acronym></p>
-        <% end %>
-        <% if customer_signed_in? %>
-          <% if current_customer.cart_items.pluck(:product_id ).include?(product.id) %>
-              <%= link_to(cart_items_path, class: "btn btn-default add-to-cart") do %>
-                 <i class="fa fa-shopping-cart"></i>Go to Cart
+<% if product.quantity > 0 %>
+  <div class="col-sm-3">
+    <div class="product-image-wrapper">
+      <div class="single-products">
+        <div class="productinfo text-center">
+          <%= link_to product_path(product) do %>
+            <%= image_tag(product.pictures.find_by(imageable_id: product.id).image.url) %>
+          <% end %>
+          <h2>&#8377; <%= product.price %></h2>
+          
+          <%= link_to product_path(product) do%>
+            <p><acronym title="<%= product.name %>"> <%= truncate(product.name , length:23) %></acronym></p>
+          <% end %>
+          <% if customer_signed_in? %>
+            <% if current_customer.cart_items.pluck(:product_id ).include?(product.id) %>
+                <%= link_to(cart_items_path, class: "btn btn-default add-to-cart") do %>
+                   <i class="fa fa-shopping-cart"></i>Go to Cart
+                <% end -%>
+            <% else %>
+              <%= link_to(cart_items_path(product_id: product.id),:method => :post, remote: true,  class: "btn btn-default add-to-cart") do %>
+                   <i class="fa fa-shopping-cart"></i> Add to cart
               <% end -%>
-          <% else %>
-            <%= link_to(cart_items_path(product_id: product.id),:method => :post, remote: true,  class: "btn btn-default add-to-cart") do %>
-                 <i class="fa fa-shopping-cart"></i> Add to cart
-            <% end -%>
-          <% end %>
-        <% else %> 
-          <%= link_to(cart_items_path(product_id: product.id),:method => :post, class: "btn btn-default add-to-cart") do %>
-             <i class="fa fa-shopping-cart"></i>
-              Add to cart
-          <% end %>
-        <%end%>
+            <% end %>
+          <% else %> 
+            <%= link_to(cart_items_path(product_id: product.id),:method => :post, class: "btn btn-default add-to-cart") do %>
+               <i class="fa fa-shopping-cart"></i>
+                Add to cart
+            <% end %>
+          <%end%>
+        </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
       
     
  
