--- a/app/views/customer_orders/cancel_order.html.erb
+++ b/app/views/customer_orders/cancel_order.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row success-payment" style="border-style: inset;">
     <div class="col-sm-12">
-      <h2 align="center">Thanks, Your Order Successfully Canceled!</strong>!</h2>
+      <h2 align="center">Thanks, Your Order Successfully Canceled!</strong></h2>
     </div>
-    <div class="col-sm-2 col-sm-offset-5 cancel_button">
+    <div class="col-sm-2 col-sm-offset-5 cancel_button" id="continue-but">
         <%= link_to "Continue shoping", root_path,  class: "btn btn-default" %>
     </div>
   </div>
