--- a/app/views/cart_items/destroy.js.erb
+++ b/app/views/cart_items/destroy.js.erb
@@ -1,6 +1,6 @@
 $("#item-<%=@cart_item[:id]%>").remove();
 $('#total_area').html("<%= j (render partial: 'total_area',:locals => {:tax => @tax, :cart_sub_total => @cart_sub_total}) %>");
-$('#cart-item-count').html(" (" +<%= @cart_items.count %>+ " )" )
+$('#cart-item-count').html(<% if @cart_items.count > 0 %>" (" +<%= @cart_items.count %>+ " )" <% else %> "" <% end %>)
 $('#checkout_total_area').html("<%= j (render partial: 'checkouts/total_area',:locals => {:tax => @tax, :cart_sub_total => @cart_sub_total, :total => @total}) %>");
 $('#empty').html("<%= j (render partial: 'empty_item') %>");
 $('#table-head').html("<%= j (render partial: 'table_head') %>");
