--- a/app/views/checkouts/_address.html.erb
+++ b/app/views/checkouts/_address.html.erb
@@ -1,39 +1,50 @@
-<div id="edit_address">
-  <div class="col-sm-12">
-    <% @customer_addresses.each do |address| %>
-      <%if address.status == "active"%>
-        <div class="col-sm-4" id="address-<%= address.id%>">
-          <div class="panel panel-default">
-            <div class="panel-body">
-              <p><strong><%= address.name %></strong></p>
-              <hr>
-             <%= address.address_1 %>
-              <%= address.address_2 %> <%= address.city %>
-              <%= address.state %>
-              <%= address.country %>
-              <%= address.zipcode %>
-              <hr>
-              <p style="font-size:14px"><strong><%= address.mobile_number %></strong></p>
-              <hr>
-              <%= link_to edit_address_path(address), style: "color: black", remote: true do %>
-                <i class="fa fa-pencil-square-o"></i>
-                <span>EDIT</span>
-              <% end %>
-              
-               <%= link_to(address_path(address), :method => :put, remote: true,  style: "color: black;margin-left: 180px" ) do %>
-                <i class="fa fa-trash-o"></i>
-                <span>DELETE</span>
-              <% end %>
-              <hr>
-              <%= link_to "Use this Address", review_payment_path(address_id: address.id) %>
+
+  <div id="edit_address">
+    <div class="col-sm-12">
+      <% @customer_addresses.each do |address| %>
+        <%if address.status == "active"%>
+          <div class="col-sm-4" id="address-<%= address.id%>">
+            <div class="panel panel-default">
+              <div class="panel-body ">
+                <p><strong><%= address.name %></strong></p>
+                <hr>
+               <%= address.address_1 %>
+                <%= address.address_2 %> <%= address.city %>
+                <%= address.state %>
+                <%= address.country %>
+                <%= address.zipcode %>
+                <hr>
+                <p style="font-size:14px"><strong><%= address.mobile_number %></strong></p>
+                <hr>
+                
+                
+                 
+                <div class="row">
+                  <div class="col-sm-4 col-sm-offset-1">
+                     <%= link_to edit_address_path(address), style: "color: black", remote: true do %>
+                    <i class="fa fa-pencil-square-o"></i>
+                    <span>EDIT</span>
+                    <% end %>
+                  </div>
+                  <div class="col-sm-4 col-sm-offset-3" >
+                    <%= link_to(address_path(address), :method => :put, remote: true,  style: "color: black;" ) do %>
+                    <i class="fa fa-trash-o"></i>
+                    <span>DELETE</span> 
+                     <% end %>
+                  </div>
+                </div>
+                <hr>
+                <div class="row cancel-payment">
+                  <div class="col-sm-8 col-sm-offset-2" align="center">
+                    <%= link_to(review_payment_path(address_id: address.id), class: "btn btn-default cancel-payment") do %>Delivery on this Address<%end%>
+                  <div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
+    <div class="modal fade" id="edit-address" role="dialog">
+    </div>
   </div>
-  <div class="modal fade" id="edit-address" role="dialog">
-  </div>
-</div>
- 
- 
