--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,22 +5,14 @@
       <div class="col-sm-9 padding-right">
         <div class="category-tab"><!--category-tab-->
           <div class="col-sm-12">
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs" id="categories">
              <%= render "categories"%>
            </ul>
           </div>
           
-          <div class="tab-content">
-            <%if @products.present? %>
-              <% @products.each do |product| %>
-                <div class="tab-pane fade active in" id="product-list-<%=product.id%>" >
-                  <%= render "components/content" ,product: product %>
-                </div>
-              <%end%>
-            <% else %>
-              <h2 align="center"> Product not available</h2>
-            <% end %>
-           </div>
+          <div class="tab-content" id="categories_products">
+            <%= render "categories_products"%>
+          </div>
         </div><!--/category-tab-->
         
           <%= render "components/recommended" %>
