--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,20 +6,12 @@
       <div class="col-sm-9 padding-right">
         <div class="category-tab"><!--category-tab-->
           <div class="col-sm-12">
-            <ul class="nav nav-tabs">
-              <%= render "components/sub_categories_navigation"%>
+            <ul class="nav nav-tabs" id="home_subcategories_navigation">
+              <%= render "home_subcategories_navigation"%>
             </ul>
           </div>
-          <div class="tab-content">
-            <%if @products.present? %>
-              <% @products.each do |product| %>
-              <div class="tab-pane fade active in" id="product-list-<%=product.id%>" >
-                <%= render "components/content" ,product: product %>
-              </div>
-              <%end%>
-            <% else %>
-              <h2 align="center"> Product not available</h2>
-            <% end %>
+          <div class="tab-content" id="home_products">
+            <%= render "home_products"%>
           </div>
         </div>
         <div class="recommended_items"><!--recommended_items-->
