--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -159,3 +159,23 @@ button a{
   margin-left: 80px;
 
 }
+#add-to-wish-list a{
+  color: black;
+  text-decoration:none;
+}
+#delete-wish-list a{
+  color: red;
+  text-decoration:none;
+}
+#add-wish-list a{
+  color: black;
+  text-decoration:none;
+}
+.wish-list-remove-button {
+  text-decoration:none;
+  margin-left: 60px;
+}
+.wish-list-remove-button a{
+  text-decoration:none;
+  color: red;
+}
