--- a/app/views/cart_items/_cart_item.html.erb
+++ b/app/views/cart_items/_cart_item.html.erb
@@ -27,7 +27,7 @@
   </p>
 </td>
 <td class="cart_delete">
-  <%= link_to(cart_item_path(item),class: "cart_quantity_delete ", method: :delete, remote: true, data: {confirm: "Are you want remove item from Cart?"}) do %>
+  <%= link_to(cart_item_path(item),class: "cart_quantity_delete ", method: :delete, remote: true, data: {confirm: "Do you want remove item from Cart?"}) do %>
     <i class="fa fa-times"></i>
   <%end%>
 </td>
