--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,11 @@
       <div class="col-sm-9 padding-right">
         <div class="product-details"><!--product-details-->
           <div class="col-sm-5">
+             <h3 id="add-product-to-wish-list" align="right">
+              <%= render "wish_lists/form", product: @product %>
+               </h3>
             <div class="view-product">
+
               <%= image_tag(@product.pictures.find_by(imageable_id: @product.id).image.url) %>
               <h3>ZOOM</h3>
             </div>
@@ -39,28 +43,29 @@
             <div class="product-information"><!--/product-information-->
               <%= image_tag "product-details/new.jpg", class: "newarrival" %>
                 <h2><%= @product.name %></h2>
-                <p>Web ID: 1089772</p>
+                <p></p>
                 <p><%= image_tag "product-details/rating.png" %></p>
+                <p>
                 <span id= "item<%= @product.id%>">
-                <span>&#8377;<%= @product.price %>&#160;&#160;&#160;&#160;
-                  <% if customer_signed_in? %>
-                    <% if current_customer.cart_items.pluck(:product_id ).include?(@product.id) %>
-                      <%= link_to(cart_items_path, class: "btn btn-default add-to-cart") do %>
-                        <i class="fa fa-shopping-cart"></i> Go to Cart
-                      <% end -%>
-                    <% else %>
-                      <%= link_to(cart_items_path(product_id: @product.id), :method => :post, class: "btn btn-default add-to-cart") do %>
-                        <i class="fa fa-shopping-cart"></i>Add to cart
-                      <% end -%>
-                    <% end %>
-                  <% else %> 
-                    <%= link_to(cart_items_path(product_id: @product.id),:method => :post,  class: "btn btn-prim add-to-cart") do %>
-                      <i class="fa fa-shopping-cart"></i>
-                      Add to cart
-                    <% end %>
-                  <%end%>
+                  <span >&#8377;<%= @product.price %> </span>
+                    <span class="product-information1"><% if customer_signed_in? %>
+                      <% if current_customer.cart_items.pluck(:product_id ).include?(@product.id) %>
+                        <%= link_to(cart_items_path, class: "btn btn-default") do %>
+                          <i class="fa fa-shopping-cart"></i> Go to Cart
+                        <% end -%>
+                      <% else %>
+                        <%= link_to(cart_items_path(product_id: @product.id), :method => :post, class: "btn btn-default") do %>
+                          <i class="fa fa-shopping-cart"></i>Add to cart
+                        <% end -%>
+                      <% end %>
+                    <% else %> 
+                      <%= link_to(cart_items_path(product_id: @product.id),:method => :post,  class: "btn btn-default ") do %>
+                        <i class="fa fa-shopping-cart"></i>
+                        Add to cart
+                      <% end %>
+                    <%end%>
+                  </span>
                 </span>
-              
               <p><b>Availability:</b><% if @product.quantity > 0 %>
                In Stock <% else %> Out Of Stock<% end %> </p>
               <p><b>Condition:</b> New</p>
