--- a/app/views/wish_lists/_form.html.erb
+++ b/app/views/wish_lists/_form.html.erb
@@ -1,25 +1,16 @@
-<%= form_for(@wish_list) do |f| %>
-  <% if @wish_list.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@wish_list.errors.count, "error") %> prohibited this wish_list from being saved:</h2>
-
-      <ul>
-      <% @wish_list.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+<%if customer_signed_in? %>
+  <% if current_customer.wish_lists.pluck(:product_id ).include?(product.id) %>
+  <span id="delete-wish-list">
+    <%= link_to(wish_list_path(product), :method => :delete, remote: true) do%><i class="fa fa-heart" aria-hidden="true"></i><% end %>
+  <span>
+  <% else %>
+    <span id="add-wish-list">
+      <%= link_to(wish_lists_path(product_id: product.id), :method => :post, remote: true) do%><i class="fa fa-heart-o" aria-hidden="true"></i><% end %>
+    </span>
   <% end %>
-
-  <div class="field">
-    <%= f.label :customer_id %><br>
-    <%= f.text_field :customer_id %>
-  </div>
-  <div class="field">
-    <%= f.label :product_id %><br>
-    <%= f.text_field :product_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<% else %>
+<span>
+  <span id="add-to-wish-list">
+   <%= link_to(wish_lists_path(product_id: product.id), :method => :post) do%><i class="fa fa-heart-o" aria-hidden="true"></i> <% end %>
+ </span>
 <% end %>
