add my order Functionality to application

--- a/app/views/components/_content.html.erb
+++ b/app/views/components/_content.html.erb
@@ -5,7 +5,7 @@
         <div class="productinfo text-center">
           
             <h4 align="right" id="wish-list-<%= product.id%>">
-                <%=render "wish_lists/form", :product => product %>
+                <%=render "wish_lists/wish_list_links", :product => product %>
             </h4>
          
           <%= link_to product_path(product) do %>
