mainmenu calss remove from menu bar div

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
                 <span class="icon-bar"></span>
               </button>
             </div>
-            <div class="shop-menu pull-right mainmenu">
+            <div class="shop-menu pull-right">
               <ul class="nav navbar-nav collapse navbar-collapse">
                
                 <li><a href="#"><i class="fa fa-user"></i> Account</a></li>
