close strong tag from cancel mailer

--- a/app/views/order_mailer/order_cancel_email.html.erb
+++ b/app/views/order_mailer/order_cancel_email.html.erb
@@ -8,7 +8,7 @@
     <%= image_tag attachments['logo.png'].url -%>
     <h4>Hello, <%= @customer.first_name %></h4>
     <p>
-      Your Order Successfully <strong>canceled<strong>, your  <strong>&#8377; <%= @amount%></strong> amount is refunded.
+      Your Order Successfully <strong>canceled</strong>, your  <strong>&#8377; <%= @amount%></strong> amount is refunded.
       <br>
     </p>
     <p>
