add contact us and related items and recommended functionality

--- a/app/views/components/_content.html.erb
+++ b/app/views/components/_content.html.erb
@@ -9,7 +9,7 @@
             </h4>
          
           <%= link_to product_path(product) do %>
-            <%= image_tag(product.pictures.find_by(imageable_id: product.id).image.url) %>
+            <%= image_tag(product.pictures.first.image.url) %>
           <% end %>
           <h2>&#8377; <%= product.price %></h2>
           
