--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1490,7 +1490,7 @@ h2.title {
   margin-top: 23px;
 }
 
-.login-form form button, .signup-form form button, .create-address button, .cuntinue-payment-button a, .success-payment a{
+.login-form form button, .signup-form form button, .create-address button, .cuntinue-payment-button a, .success-payment a, .message-reply a{
   background: #FE980F;
   border: medium none;
   border-radius: 8;
@@ -2474,7 +2474,7 @@ h2.title {
 
 .contact-map {
   width: 100%;
-  height: 385px;
+  height: 20px;
   margin-bottom: 70px
 }
 
@@ -2508,7 +2508,10 @@ h2.title {
   height:160px;
   resize:none;
 }
-
+ #contact-page #reply-admin {
+  height:160px;
+  resize:none;
+}
 #main-contact-form .btn-primary {
   margin-bottom: 15px;
   margin-top: 20px;
