--- a/app/views/cart_items/_cart_item.html.erb
+++ b/app/views/cart_items/_cart_item.html.erb
@@ -1,5 +1,5 @@
 <td class="cart_product">
-  <%= link_to product_path(item.product) do %><%= image_tag(item.product.pictures.find_by(imageable_id: item.product.id).image.url,size: "100x100") %>
+  <%= link_to product_path(item.product) do %><%= image_tag(item.product.pictures.first.image.url,size: "100x100") %>
   <% end %>
 </td>
 <td class="cart_description" >
