--- a/app/views/cart_items/create.js.erb
+++ b/app/views/cart_items/create.js.erb
@@ -3,3 +3,4 @@ $('#product-list-<%=@product[:id]%>').html("<%= escape_javascript(render partial
 $('#cart-item-count').html(" (" +<%= @cart_items.count %>+ ") ");
 
 $('#wish-list-item-<%=@wish_list[:id]%>').html("<%= j (render partial: 'wish_lists/wish_list_item', :locals => {:item => @wish_list}) %>");
+$('#recommended_item-<%=@product[:id]%>').html("<%= j (render partial: 'products/recommended_items', :locals => {:product=> @product}) %>");
