--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,34 +1,19 @@
-<div id="contact-page" class="container">
-  <div class="bg">
-    <div class="row">       
-      <div class="col-sm-12">                 
-      <h2 class="title text-center">Contact <strong>Us</strong></h2>                                  
-      <div id="gmap" class="contact-map">
-      </div>
-    </div>          
-  </div>      
+<% if current_customer.admin != true %>
+  <div id="contact-page" class="container">
+    <div class="bg">
+      <div class="row">       
+        <div class="col-sm-12">                 
+        <h2 class="title text-center">Contact <strong>Us</strong></h2>                                  
+        <div id="gmap" class="contact-map">
+        </div>
+      </div>          
+    </div>      
     <div class="row">   
       <div class="col-sm-8">
         <div class="contact-form">
           <h2 class="title text-center">Get In Touch</h2>
           <div class="status alert alert-success" style="display: none"></div>
-          <form id="main-contact-form" class="contact-form row" name="contact-form" method="post">
-                <div class="form-group col-md-6">
-                    <input type="text" name="name" class="form-control" required="required" placeholder="Name">
-                </div>
-                <div class="form-group col-md-6">
-                    <input type="email" name="email" class="form-control" required="required" placeholder="Email">
-                </div>
-                <div class="form-group col-md-12">
-                    <input type="text" name="subject" class="form-control" required="required" placeholder="Subject">
-                </div>
-                <div class="form-group col-md-12">
-                    <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Your Message Here"></textarea>
-                </div>                        
-                <div class="form-group col-md-12">
-                    <input type="submit" name="submit" class="btn btn-primary pull-right" value="Submit">
-                </div>
-            </form>
+            <%= render "form"%>
         </div>
       </div>
       <div class="col-sm-4">
@@ -62,5 +47,64 @@
         </div>
       </div>          
     </div>  
-  </div>  
-</div><!--/#contact-page-->
+    </div>  
+  </div><!--/#contact-page-->
+<% else %>
+  <div id="contact-page" class="container">
+    <div class="bg">
+      <div class="row">       
+        <div class="col-sm-12">                 
+        <h2 class="title text-center">Contact <strong>Messages</strong></h2>                                  
+        <div id="gmap" class="contact-map">
+        </div>
+      </div>          
+    </div>
+    <div class="row">
+      <% if @contacts.present? %>
+        <% @contacts.each do |contact|%>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <div class="row">
+                  <div class="col-sm-2">
+                    <p ><Strong>NAME</strong></p>
+                    <p ><%= contact.name %></p>
+                  </div> 
+                  <div class="col-sm-2">
+                  </div>
+                  <div class="col-sm-2">
+                    <p><Strong>SUBJECT</strong></p>
+                    <p><%= contact.subject %></p>
+                  </div>
+                  <div class="col-sm-3 col-sm-offset-3">
+                    <p align="right"> <strong>MESSAGE DATE</strong></p>
+                    <p align="right"><%= contact.created_at.strftime("%d %B %Y") %></p>
+                  </div>
+                </div>
+              </div>
+              <div class="panel-body">
+                <div class="col-sm-12 list-my_order">
+                  <h4> MESSAGE </h4>
+                  <div class="panel panel-default">
+                    <div class="panel-body">
+                      <%= contact.message %>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-2 list-my_order message-reply">
+                  <p align="right"><%=link_to(edit_contact_path(contact), class: "btn btn-default", remote: true) do %>Reply<% end %></p>
+                </div>
+              </div>
+            </div>
+        <% end %>
+      <% else %>
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <div class="col-sm-12 list-my_order">
+              <h2 align="center">No Messages </h2>
+            </div>
+          </div>
+        </div>
+      <% end %>
+<% end %> 
+<div class="modal fade" id="reply-message" role="dialog">
+  </div>
