--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -188,7 +188,7 @@
                             <li><a href="blog-single.html">Blog Single</a></li>
                           </ul>
                         </li> 
-                        <li><a href="#">Contact</a></li>
+                        <li><%= link_to(contacts_path) do %>Contact<% end %></li>
                       </ul>
                     </div>
                   </div>
