--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,110 +1,163 @@
-<% if current_customer.admin != true %>
-  <div id="contact-page" class="container">
-    <div class="bg">
-      <div class="row">       
-        <div class="col-sm-12">                 
-        <h2 class="title text-center">Contact <strong>Us</strong></h2>                                  
-        <div id="gmap" class="contact-map">
-        </div>
-      </div>          
-    </div>      
-    <div class="row">   
-      <div class="col-sm-8">
-        <div class="contact-form">
-          <h2 class="title text-center">Get In Touch</h2>
-          <div class="status alert alert-success" style="display: none"></div>
-            <%= render "form"%>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="contact-info">
-          <h2 class="title text-center">Contact Info</h2>
-          <address>
-            <p>E-Shopper Inc.</p>
-          <p>935 W. Webster Ave New Streets Chicago, IL 60614, NY</p>
-          <p>Newyork USA</p>
-          <p>Mobile: +2346 17 38 93</p>
-          <p>Fax: 1-714-252-0026</p>
-          <p>Email: info@e-shopper.com</p>
-          </address>
-          <div class="social-networks">
-            <h2 class="title text-center">Social Networking</h2>
-          <ul>
-            <li>
-              <a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-google-plus"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa fa-youtube"></i></a>
-            </li>
-          </ul>
+<% if customer_signed_in? %>
+  <% if current_customer.admin != true %>
+    <div id="contact-page" class="container">
+      <div class="bg">
+        <div class="row">       
+          <div class="col-sm-12">                 
+          <h2 class="title text-center">Contact <strong>Us</strong></h2>                                  
+          <div id="gmap" class="contact-map">
+          </div>
+        </div>          
+      </div>      
+      <div class="row">   
+        <div class="col-sm-8">
+          <div class="contact-form">
+            <h2 class="title text-center">Get In Touch</h2>
+            <div class="status alert alert-success" style="display: none"></div>
+              <%= render "form"%>
           </div>
         </div>
-      </div>          
-    </div>  
-    </div>  
-  </div><!--/#contact-page-->
-<% else %>
-  <div id="contact-page" class="container">
-    <div class="bg">
-      <div class="row">       
-        <div class="col-sm-12">                 
-        <h2 class="title text-center">Contact <strong>Messages</strong></h2>                                  
-        <div id="gmap" class="contact-map">
-        </div>
-      </div>          
-    </div>
-    <div class="row">
-      <% if @contacts.present? %>
-        <% @contacts.each do |contact|%>
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <div class="row">
-                  <div class="col-sm-2">
-                    <p ><Strong>NAME</strong></p>
-                    <p ><%= contact.name %></p>
-                  </div> 
-                  <div class="col-sm-2">
-                  </div>
-                  <div class="col-sm-2">
-                    <p><Strong>SUBJECT</strong></p>
-                    <p><%= contact.subject %></p>
-                  </div>
-                  <div class="col-sm-3 col-sm-offset-3">
-                    <p align="right"> <strong>MESSAGE DATE</strong></p>
-                    <p align="right"><%= contact.created_at.strftime("%d %B %Y") %></p>
-                  </div>
-                </div>
-              </div>
-              <div class="panel-body">
-                <div class="col-sm-12 list-my_order">
-                  <h4> MESSAGE </h4>
-                  <div class="panel panel-default">
-                    <div class="panel-body">
-                      <%= contact.message %>
+        <div class="col-sm-4">
+          <div class="contact-info">
+            <h2 class="title text-center">Contact Info</h2>
+            <address>
+              <p>E-Shopper Inc.</p>
+            <p>935 W. Webster Ave New Streets Chicago, IL 60614, NY</p>
+            <p>Newyork USA</p>
+            <p>Mobile: +2346 17 38 93</p>
+            <p>Fax: 1-714-252-0026</p>
+            <p>Email: info@e-shopper.com</p>
+            </address>
+            <div class="social-networks">
+              <h2 class="title text-center">Social Networking</h2>
+            <ul>
+              <li>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-google-plus"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+              </li>
+            </ul>
+            </div>
+          </div>
+        </div>          
+      </div>  
+      </div>  
+    </div><!--/#contact-page-->
+  <% else %>
+    <div id="contact-page" class="container">
+      <div class="bg">
+        <div class="row">       
+          <div class="col-sm-12">                 
+          <h2 class="title text-center">Contact <strong>Messages</strong></h2>                                  
+          <div id="gmap" class="contact-map">
+          </div>
+        </div>          
+      </div>
+      <div class="row">
+        <% if @contacts.present? %>
+          <% @contacts.each do |contact|%>
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <div class="row">
+                    <div class="col-sm-2">
+                      <p ><Strong>NAME</strong></p>
+                      <p ><%= contact.name %></p>
+                    </div> 
+                    <div class="col-sm-2">
+                    </div>
+                    <div class="col-sm-2">
+                      <p><Strong>SUBJECT</strong></p>
+                      <p><%= contact.subject %></p>
+                    </div>
+                    <div class="col-sm-3 col-sm-offset-3">
+                      <p align="right"> <strong>MESSAGE DATE</strong></p>
+                      <p align="right"><%= contact.created_at.strftime("%d %B %Y") %></p>
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-2 list-my_order message-reply">
-                  <p align="right"><%=link_to(edit_contact_path(contact), class: "btn btn-default", remote: true) do %>Reply<% end %></p>
+                <div class="panel-body">
+                  <div class="col-sm-12 list-my_order">
+                    <h4> MESSAGE </h4>
+                    <div class="panel panel-default">
+                      <div class="panel-body">
+                        <%= contact.message %>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-2 list-my_order message-reply">
+                    <p align="right"><%=link_to(edit_contact_path(contact), class: "btn btn-default", remote: true) do %>Reply<% end %></p>
+                  </div>
                 </div>
               </div>
-            </div>
-        <% end %>
-      <% else %>
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="col-sm-12 list-my_order">
-              <h2 align="center">No Messages </h2>
+          <% end %>
+        <% else %>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="col-sm-12 list-my_order">
+                <h2 align="center">No Messages </h2>
+              </div>
             </div>
           </div>
+        <% end %>
+  <% end %>
+<% else %>
+  <div id="contact-page" class="container">
+      <div class="bg">
+        <div class="row">       
+          <div class="col-sm-12">                 
+          <h2 class="title text-center">Contact <strong>Us</strong></h2>                                  
+          <div id="gmap" class="contact-map">
+          </div>
+        </div>          
+      </div>      
+      <div class="row">   
+        <div class="col-sm-8">
+          <div class="contact-form">
+            <h2 class="title text-center">Get In Touch</h2>
+            <div class="status alert alert-success" style="display: none"></div>
+              <%= render "form"%>
+          </div>
         </div>
-      <% end %>
+        <div class="col-sm-4">
+          <div class="contact-info">
+            <h2 class="title text-center">Contact Info</h2>
+            <address>
+              <p>E-Shopper Inc.</p>
+            <p>935 W. Webster Ave New Streets Chicago, IL 60614, NY</p>
+            <p>Newyork USA</p>
+            <p>Mobile: +2346 17 38 93</p>
+            <p>Fax: 1-714-252-0026</p>
+            <p>Email: info@e-shopper.com</p>
+            </address>
+            <div class="social-networks">
+              <h2 class="title text-center">Social Networking</h2>
+            <ul>
+              <li>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-google-plus"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-youtube"></i></a>
+              </li>
+            </ul>
+            </div>
+          </div>
+        </div>          
+      </div>  
+      </div>  
+    </div><!--/#contact-page-->
 <% end %> 
 <div class="modal fade" id="reply-message" role="dialog">
   </div>
