--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,28 +10,19 @@
                </h1>
             <div class="view-product">
 
-              <%= image_tag(@product.pictures.first.image.url, id: "foo") %>
-              <h3>ZOOM</h3>
+              <%= image_tag(@product.pictures.first.image.url, id: "original-image") %>
             </div>
             <% if @product.pictures.count > 1%>
               <div id="similar-product" class="carousel slide" data-ride="carousel"><!-- Wrapper for slides -->
                 <div class="carousel-inner">
-                  <div class="item active">
-                    <% @product.pictures.each_with_index do |image,index| %> 
-                      <%if index > 0 && index <= 3 %>
-                        <%= image_tag(image.image.url, size:"90x90", onclick: "show('#{image.image.url}')") %>
-                      <% end %>
-                    <% end %>
-                  </div>
-                  <%if @product.pictures.count > 4%>
-                    <div class="item">
-                      <%@product.pictures.each_with_index do |image,index| %>
-                        <%if index > 3 && index <= 6 %>
-                          <%= image_tag(image.image.url, size: "90x90") %>
-                        <% end %>
-                      <% end %> 
+                  <% @product.pictures.each_slice(3).with_index do |images,index| %> 
+                    <div class="<%=index == 0 ? 'item active' : 'item'%>" >
+                      <% images.each do |picture| %>
+                        <%= image_tag(picture.image.url, size:"90x90", onclick: "show('#{picture.image.url}')") %>
+                     <% end %>
                     </div>
                   <% end %>
+                  
                 </div><!-- Controls -->
                 <%if @product.pictures.count > 4%>
                   <a class="left item-control" href="#similar-product" data-slide="prev">
