--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,7 +18,7 @@
                   <% @product.pictures.each_slice(3).with_index do |images,index| %> 
                     <div class="<%=index == 0 ? 'item active' : 'item'%>" >
                       <% images.each do |picture| %>
-                        <%= image_tag(picture.image.url, size:"90x90", onclick: "show('#{picture.image.url}')") %>
+                        <%= image_tag(picture.image.url, onclick: "show_image('#{picture.image.url}')", size:"90x90") %>
                      <% end %>
                     </div>
                   <% end %>
@@ -268,3 +268,10 @@
   </div>
 </section>
   
+<script type="text/javascript">
+function show_image(url) 
+{
+  $("#original-image").attr("src", url); 
+};
+</script>
+
