--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -11,13 +11,14 @@
 
           <div class="col-sm-6 col-sm-offset-3 billing-form">
             <%= f.text_field "name", placeholder: "Name *", required: "required"%>
-            <%= f.text_field "address_1",  placeholder: "Address 1 *", required: "required"%>
+            <%= f.text_field "address_1",  placeholder: "Address 1 *", required: "required", maxlength: '100'%>
             <%= f.text_field "address_2",  placeholder: "Address 2"%>
             <%= f.text_field "city", placeholder: "city *", required: "required"%>
             <%= f.text_field "zipcode", placeholder: "Zip / Postal Code *", required: "required"%>
             <%= f.select :country, CountryStateSelect::countries_collection, {}, id: 'country_id', required: "required" %>
-            <%= f.text_field :state ,:id=>'state_name', placeholder: "State *", required: "required" %>
-            <%= f.text_field "mobile_number", placeholder: "Mobile Phone"%>
+             <% @state = ["Andaman and Nicobar Islands","Andhra Pradesh","Arunachal Pradesh","Assam","Bihar","Chandigarh","Chhattisgarh","Dadra and Nagar Haveli","Daman and Diu","Delhi","Goa","Gujarat","Haryana","Himachal Pradesh","Jammu and Kashmir","Jharkhand","Karnataka","Kerala","Lakshadweep","Madhya Pradesh","Maharashtra","Manipur","Meghalaya","Mizoram","Nagaland","Orissa","Pondicherry","Punjab","Rajasthan","Sikkim","Tamil Nadu","Tripura","Uttaranchal","Uttar Pradesh","West Bengal"] %>
+        <%= f.select(:state, @state, {include_blank: "-- State / Province / Region --"}, id: "state", required: "required") %>
+            <%= f.text_field "mobile_number", placeholder: "Mobile Phone",  pattern:"[1-9][0-9]{9}"%>
             <%= f.hidden_field "customer_id", value: "#{current_customer.id}"%>
             <%= f.hidden_field "address_type", value: "billing"%>
           </div>
